# agentkeeper

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentkeeper/: __init__.py  _fastmath.py  async_agent.py  retry.py
agentkeeper-ak11/: .gitignore  CONTRIBUTING.md
agentkeeper-ak11/agentkeeper/: __init__.py  async_agent.py  errors.py  logging.py
agentkeeper-ak11/agentkeeper/adapters/: gemini.py  openai.py
agentkeeper-ak11/agentkeeper/benchmark/: __init__.py  cross_model.py  dataset.py  real_run.py  run.py  verification.py
agentkeeper-ak11/agentkeeper/compression/: consolidation.py  contradiction.py  llm_synth.py
agentkeeper-ak11/agentkeeper/cre/: __init__.py  engine.py
agentkeeper-ak11/agentkeeper/cso/: __init__.py  identity.py  tiers.py  types.py
agentkeeper-ak11/agentkeeper/retention/: __init__.py  policy.py
agentkeeper-ak11/agentkeeper/semantic/: __init__.py  sentence_transformers_provider.py  sqlite_vec_index.py
agentkeeper-ak11/agentkeeper/storage/: sqlite_store.py
agentkeeper-ak11/agentkeeper/translation/: __init__.py  renderers.py
agentkeeper-ak11/marketing/: launch_thread_x.md  release_announcement.md
agentkeeper-ak11/tests/: conftest.py  test_agent_compress.py  test_agent_recall.py  test_benchmark.py  test_contradiction.py  test_cre.py  test_decay_per_type.py  test_identity.py  test_migration.py  test_policy.py  test_profiles.py  test_retention.py  test_sqlite_vec.py  test_tiers.py  test_ttl.py  test_vector_index.py
agentkeeper/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
agentkeeper/benchmark/: __init__.py  real_run.py
agentkeeper/checkpoint/: __init__.py  diff.py
agentkeeper/compression/: __init__.py  async_llm_synth.py  consolidation.py  contradiction.py  decay.py  pipeline.py
agentkeeper/cre/: engine.py
agentkeeper/cso/: __init__.py  fact_types.py  inference.py  types.py
agentkeeper/graph/: __init__.py  relation_graph.py  triple.py
agentkeeper/integrations/: __init__.py  crewai.py  langchain.py
agentkeeper/mcp/: __init__.py  errors.py  server.py
agentkeeper/retention/: ttl.py
agentkeeper/semantic/: __init__.py  base.py  factory.py  index.py  mock.py  openai_provider.py  recaller.py  sqlite_vec_index.py
agentkeeper/storage/: __init__.py  base.py  encrypted_sqlite.py  factory.py  postgres.py
agentkeeper/translation/: profiles.py
benchmark/: stress_test.py
examples/: CRASH_RECOVERY.md  _crash_resume.py  _crash_work.py  crash_recovery.py  demo.py
examples/mcp/: README.md  claude_desktop_config.json  cursor_mcp_json.json
marketing/: README.md  email_template.md  linkedin_post.md  release_notes_github.md  supporter_dms.md
tests/: test_adapters.py  test_agent_api.py  test_agent_graph.py  test_async_agent.py  test_async_llm_synth.py  test_checkpoint.py  test_consolidation.py  test_cre.py  test_cross_model.py  test_cso.py  test_decay.py  test_embedding_mock.py  test_errors.py  test_fact_types.py  test_fastmath.py  test_graph_triple.py  test_helpers_ak2.py  test_helpers_ak9.py  test_identity_hardening.py  test_integrations.py  test_mcp_server.py  test_pipeline.py  test_recaller.py  test_retry.py  test_storage.py  test_storage_pluggable.py
