[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkeeper"
version = "1.1.0.dev0"
description = "Cognitive continuity infrastructure for long-lived AI agents — cross-model state reconstruction, semantic recall, cognitive compression"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tom", email = "hello@thinklanceai.com" },
]
keywords = [
    "ai",
    "agents",
    "llm",
    "memory",
    "cognitive",
    "continuity",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "ollama",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.30.0"]
gemini = ["google-generativeai>=0.8.0"]
dotenv = ["python-dotenv>=1.0.0"]
semantic = ["sentence-transformers>=3.0.0"]
vec = ["sqlite-vec>=0.1.6"]
encrypted = ["cryptography>=42.0.0"]
mcp = ["fastmcp>=3.0.0"]
all = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
    "cryptography>=42.0.0",
    "fastmcp>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "sqlite-vec>=0.1.6",
    "cryptography>=42.0.0",
    "fastmcp>=3.0.0",
]

[project.scripts]
agentkeeper-mcp = "agentkeeper.mcp:serve_cli"

[project.urls]
Homepage = "https://github.com/Thinklanceai/agentkeeper"
Repository = "https://github.com/Thinklanceai/agentkeeper"
Issues = "https://github.com/Thinklanceai/agentkeeper/issues"

[tool.setuptools.packages.find]
include = ["agentkeeper*"]
exclude = ["tests*", "examples*", "src*"]

[tool.setuptools.package-data]
agentkeeper = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agentkeeper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
